--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Welcome</title>
 </head>
 <body>
-    
+    <div class="image-container">
+        <img id="background-image" src="./images/background.jpg" alt="background">
+        <img id="logo"  src="./images/logo5.png" alt="logo">
+    </div>
 </body>
 </html>
