Add Logo and Caption

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Welcome</title>
 </head>
 <body>
-    <div class="image-container">
+    <div class="left-side">
         <img id="background-image" src="./images/background.jpg" alt="background">
-        <img id="logo"  src="./images/logo5.png" alt="logo">
+        <div class="logo-background">MAGNA CARTA</div>
+        <img id="logo"  src="./images/logo6.png" alt="logo">
     </div>
 </body>
 </html>
