--- a/index.html
+++ b/index.html
@@ -12,5 +12,30 @@
         <div class="logo-background">MAGNA CARTA</div>
         <img id="logo"  src="./images/logo6.png" alt="logo">
     </div>
+    <div class="right-side">
+        <header>This is not a real site You know you need something like this for your deepest dream Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit incidunt repellendus inventore facilis dignissimos mollitia pariatur. Assumenda labore necessitatibus nam, neque, magnam id modi eaque minima consectetur voluptatem aliquam ut.</header>
+        <main>
+            <form>
+                <div class="form-row">
+                    <label for="user_fname">First Name</label>
+                    <input type="text" id="user_fname" name="user_fname" required>
+                    <label for="user_lname">Last Name</label>
+                    <input type="text" id="user_lname" name="user_lname" required>
+                </div>
+                <div class="form-row">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="phone_num">Phone Number</label>
+                    <input type="number" id="phone_num" name="phone_num" required>
+                </div>
+                <div class="form-row">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                    <label for="confirm_password">Confirm Password</label>
+                    <input type="password" id="confirm_password" name="confirm_password" required>
+                </div>
+            </form>
+        </main>
+    </div>
 </body>
 </html>
