--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="form-row">
                     <div class="label-container">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
+                        <input type="password" id="password" name="password" pattern="[.6]" placeholder="Should be 6 characters long" required>
                     </div>
                     <div class="label-container">
                         <label for="confirm_password">Confirm Password</label>
